--- a/catch.html
+++ b/catch.html
@@ -42,18 +42,18 @@
     </style>
   </head>
   <body>
-    <h1 id="counterdisplay">0</h1>
+    <!-- <h1 id="counterdisplay">0</h1> -->
     <div id="buttons">
-      <button id="btn1" class="inactive">button 1</button>
-      <button id="btn2" class="inactive">button 2</button>
-      <button id="btn3" class="inactive">button 3</button>
-      <button id="btn4" class="inactive">button 4</button>
-      <button id="btn5" class="inactive">button 5</button>
-      <button id="btn6" class="inactive">button 6</button>
-      <button id="btn7" class="inactive">button 7</button>
-      <button id="btn8" class="inactive">button 8</button>
-      <button id="btn9" class="inactive">button 9</button>
-      <button id="btn10" class="inactive">button 10</button>
+      <button id="btn1" class="inactive">Click Me</button>
+      <button id="btn2" class="inactive">Click Me</button>
+      <button id="btn3" class="inactive">Click Me</button>
+      <button id="btn4" class="inactive">Click Me</button>
+      <button id="btn5" class="inactive">Click Me</button>
+      <button id="btn6" class="inactive">Click Me</button>
+      <button id="btn7" class="inactive">Click Me</button>
+      <button id="btn8" class="inactive">Click Me</button>
+      <button id="btn9" class="inactive">Click Me</button>
+      <button id="btn10" class="inactive">Click Me</button>
     </div>
   </body>
   <script>
